# rust-aoc-2019

./: Cargo.toml
calendar/day-01/: Cargo.toml
calendar/day-01/src/: main.rs
calendar/day-02/: Cargo.toml
calendar/day-02/src/: main.rs
calendar/day-03/: Cargo.toml
calendar/day-03/src/: main.rs
calendar/day-04/: Cargo.toml
calendar/day-04/src/: main.rs
calendar/day-05/: Cargo.toml
calendar/day-05/src/: main.rs
calendar/day-06/: Cargo.toml
calendar/day-06/src/: main.rs
calendar/day-07/: Cargo.toml
calendar/day-07/src/: main.rs
calendar/day-08/: Cargo.toml
calendar/day-08/src/: main.rs
calendar/day-09/: Cargo.toml
calendar/day-09/src/: main.rs
calendar/day-10/: Cargo.toml
calendar/day-10/src/: main.rs
calendar/day-11/: Cargo.toml
calendar/day-11/src/: main.rs
calendar/day-12/: Cargo.toml
calendar/day-12/src/: main.rs
calendar/day-13/: Cargo.toml
calendar/day-13/src/: main.rs
calendar/day-14/: Cargo.toml
calendar/day-14/src/: main.rs
calendar/day-15/: Cargo.toml
calendar/day-15/src/: main.rs
calendar/day-16/: Cargo.toml
calendar/day-16/src/: main.rs
