[workspace]
members = [
	"calendar/day-01",
	"calendar/day-02",
	"calendar/day-03",
	"calendar/day-04",
	"calendar/day-05",
	"calendar/day-06",
	"calendar/day-07",
	"calendar/day-08",
	"calendar/day-09",
	"calendar/day-10",
	"calendar/day-11",
	"calendar/day-12",
	"calendar/day-13",
	"calendar/day-14",
	"calendar/day-15",
]
